--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body,html {
     flex-direction: column;
     padding: 1rem;
     font-size: 2rem;
+    max-width: 70rem;
 }
 
 .diplay-container {
