--- a/style.css
+++ b/style.css
@@ -41,11 +41,21 @@ body,html {
     /* outline: 4px rgb(168, 215, 235); */
     filter: drop-shadow(1px 1px 1px rgb(24, 137, 182));
 }
-/* 
-span,.screen {
-    flex: 1;
 
+/* .result-screen {
 } */
+
+.operator-screen{
+    position: relative;
+}
+
+.operator-screen,span{
+    margin-left: .5rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    font-size: 2rem;
+}
 
 .button-container {
     flex: 1;
